# project-discord-knowledge-graph

./: .env.example  .gitignore  ARCHITECTURE_ANALYSIS.md  Dockerfile  Dockerfile.local  INTEGRATION_GUIDE.md  PRD.md  README.md  README_LOCAL_TESTING.md  docker-compose.local.yml  entrypoint.sh  pyproject.toml  requirements.txt  test-batch-export.sh  test-error-handling.sh  test-export.sh  test-local.sh
.github/workflows/: export.yml
config/: channels.txt
deployment/: Dockerfile.uploader  README.md  docker-compose.yml  gcp-setup.sh  gcp-vm-create.sh  requirements-uploader.txt  setup-secrets.sh
deployment/config/: channels.txt.example  gcs-setup.sh
deployment/scripts/: export_discord.sh  export_scheduler.py  uploader.py
examples/: sample_usage.py
scripts/: local_discord_export.py  process_exported_files.py  run_pipeline.py  setup_db.py  start_web.py
src/discord_data/: streamlit_app.py
src/discord_data/extraction/: README.md  app.py  requirements.txt  run_app.sh
src/discord_data/ingestion/: run_streamlit.sh  streamlit_app.py
src/discord_data/llm_evaluation_dashboard/: README.md  config.py  generate_sample_data.py  llm_evaluation_app.py  requirements.txt  run_dashboard.sh  test_connection.py
src/discord_data/preprocessing/: README.md  app.py  run.sh
src/discord_kg/: __init__.py
src/discord_kg/extraction/: README.md  USAGE.md  __init__.py  triple_extractor.py
src/discord_kg/ingestion/: Dockerfile  __init__.py  discord_chat_exporter.py  discord_client.py  orchestrator.py  rclone.conf.tmpl  storage.py
src/discord_kg/preprocessing/: README.md  (+7 more)
(+43 files in other folders)
